--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 .game {
   display: flex;
   flex-direction: column;
-  background: url("/img/background.png") center/cover;
+  background: url("./img/background.png") center/cover;
   width: 800px;
   height: 500px;
   margin: auto;
